# afterburner

./: .env.example  .gitignore  Cargo.toml  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
apps/backend/: Cargo.toml  hooks.nsh  tauri.conf.json
apps/backend/assets/icons/: icon.icns
apps/backend/icons/: icon.icns
apps/backend/src/: lib.rs  main.rs
apps/backend/src/ai/: anomaly.rs  mod.rs  optimizer.rs  predictor.rs  smart_alerts.rs  store.rs  tuner.rs
apps/backend/src/alerts/: engine.rs  mod.rs  types.rs
apps/backend/src/automation/: action.rs  condition.rs  engine.rs  event.rs  mod.rs  rule.rs  scheduler.rs  store.rs
apps/backend/src/backup/: engine.rs  mod.rs  store.rs
apps/backend/src/commands/: ai_commands.rs  alert_commands.rs  automation_commands.rs  backup_commands.rs  control_commands.rs  cpu_commands.rs  enterprise_commands.rs  gpu_commands.rs  integration_commands.rs  marketplace_commands.rs  mod.rs  monitoring_commands.rs  overlay_commands.rs  profile_commands.rs  remote_commands.rs  reporting_commands.rs  settings_commands.rs  state.rs  sync_commands.rs
apps/backend/src/database/: mod.rs  schema.rs  store.rs
apps/backend/src/enterprise/: config.rs  mod.rs  policy.rs  store.rs
apps/backend/src/hardware/: cpu.rs  cpu_voltage.rs  factory.rs  mod.rs  nvidia.rs  provider.rs  simulated.rs  wmi_provider.rs
apps/backend/src/integrations/: config.rs  discord.rs  mod.rs  obs.rs
apps/backend/src/marketplace/: engine.rs  mod.rs  store.rs
apps/backend/src/monitoring/: aggregator.rs  buffer.rs  collector.rs  engine.rs  exporter.rs  mod.rs
apps/backend/src/monitoring/aggregator/: mod.rs
apps/backend/src/monitoring/collector/: mod.rs
apps/backend/src/monitoring/engine/: mod.rs
apps/backend/src/monitoring/exporter/: mod.rs
apps/backend/src/overlay/: config.rs  controller.rs  game_detection.rs  mod.rs  window.rs
apps/backend/src/plugins/: mod.rs
apps/backend/src/plugins/loader/: mod.rs
apps/backend/src/plugins/manager/: mod.rs
apps/backend/src/plugins/types/: mod.rs
apps/backend/src/remote/: api.rs  auth.rs  dashboard.html  mod.rs  server.rs
apps/backend/src/reporting/: html.rs  mod.rs  report.rs  store.rs
apps/backend/src/stores/: gpu_store.rs  mod.rs  monitoring_store.rs  profile_store.rs
apps/backend/src/sync/: client.rs  mod.rs  protocol.rs  server.rs  store.rs
apps/backend/src/updater/: commands.rs  mod.rs
apps/backend/src/utils/: config.rs  error.rs  logging.rs  mod.rs  notify.rs
apps/backend/tests/: database_test.rs
apps/frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
apps/frontend/src/: App.tsx  index.css  main.tsx
apps/frontend/src/__tests__/: armouryMetrics.test.tsx  gpuStore.test.ts
apps/frontend/src/pages/: AiPage.tsx  AlertsPage.tsx  AutomationPage.tsx  BackupPage.tsx  ControlPage.tsx  DashboardPage.tsx  EnterprisePage.tsx  IntegrationsPage.tsx  MarketplacePage.tsx  OverlayPage.tsx  ProfilesPage.tsx  RemotePage.tsx  ReportsPage.tsx  SettingsPage.tsx  SyncPage.tsx  index.ts
docs/: ARCHITECTURE.md  CODING_GUIDELINES.md  ImplementationPLan.md  PHASE3_PLAN.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  claude_summary.md
mockups/afterburner-preview/: index.html
(+62 files in other folders)
