[workspace]
resolver = "2"
members = [
    "apps/backend",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Optimized release profile: smaller, faster binaries for distribution.
# lto + single codegen-unit maximize cross-crate inlining; strip removes
# debug symbols. This meaningfully shrinks the shipped GPUControl Pro binary
# and improves runtime throughput of the monitoring loop.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
incremental = false
